<resources>
  <string name="app_name">Covid19 India</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="title_my_account">My Account</string>
  <string name="title_news">Covid19 News</string>
  <string name="title_covid_19">Tracker</string>
  <string name="splashlogo">splashLogo</string>
  <string name="background_mode">Background Mode</string>
  <string name="iv_back">iv_back</string>

  <string name="row_data">Patient Data</string>
  <string name="city_wise_data">City Data</string>
  <string name="statewise_data">State Data</string>
  <string name="data">SPREAD TRENDS</string>
  <string name="blank">-</string>
  <string name="last_update">Last update</string>
  <string name="confirmed">Confirmed</string>
  <string name="recovered">Recovered</string>
  <string name="deaths">DECEASED</string>
  <string name="active">Active</string>
  <string name="desc">description</string>
  <string name="number">Number</string>
  <string name="state_patient_number">State Patient Number</string>
  <string name="gender">Gender</string>
  <string name="age">Age</string>
  <string name="nationality">Nationality</string>
  <string name="state">State</string>
  <string name="district_city">DISTRICT/CITY</string>
  <string name="status">Status</string>
  <string name="reported_on">Reported On</string>
  <string name="notes">Notes</string>
  <string name="sources">Sources</string>
  <string name="spread_trends">SPREAD TRENDS</string>
  <string name="cumulative">Cumulative</string>
  <string name="daily">Daily</string>
  <string name="pid">PId</string>
  <string name="current">Current</string>
  <string name="city">City</string>
  <string name="rcvrd">RCVD</string>
  <string name="actv">ACTV</string>
  <string name="cnfmd">CNFD</string>
  <string name="dcsd">DCSD</string>
  <string name="contact_us">Note : Content is Sourced from https://www.covid19india.org \n Contact us:- https://www.linkedin.com/in/vishalkumarsinghvi</string>
  <string name="district">DISTRICT</string>


  //firebase

  <string name="about_us">About us</string>
  <string name="sign_out">Sign Out</string>
  <string name="loading">Loading…</string>
  <string name="signed_in">Signed In</string>
  <string name="signed_out">Signed Out</string>
  <string name="auth_failed">Authentication failed</string>
  <string name="start_phone_auth">Start</string>
  <string name="verify_phone_auth">Verify</string>
  <string name="resend_phone_auth">Resend</string>
  <string name="hint_phone_number">Phone Number</string>
  <string name="hint_verification_code">Verification Code</string>
  <string name="status_code_sent">Code Sent</string>
  <string name="status_verification_failed">Verification failed</string>
  <string name="status_verification_succeeded">Verification succeeded</string>
  <string name="status_sign_in_failed">Sign-in failed</string>
  <string name="instant_validation">(instant validation)</string>
  <string name="firebase_status_fmt">Firebase UID: %s</string>
  <string name="enter_your_mobile_number_to_create_your_account">Enter your mobile number to create your account and get latest news</string>
  <string name="verify_your_number">Verify your Number</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="get_otp">GET Otp</string>
  <string name="didn_t_receive_the_otp">Didn\'t Receive the OTP?</string>
  <string name="resend_otp">RESEND OTP</string>
  <string name="verify_otp">VERIFY OTP</string>
  <string name="msg_token_fmt" />
  <string name="default_notification_channel_id">channel_id</string>
  <string name="quick_update">Breaking News</string>

  <string name="already_nhave_an_naccount">Please \nEnter \nPhone \nnumber</string>
  <string name="tested_data">Tested Data</string>
  <string name="tested">Tested</string>
  <string name="ve">+ ve</string>
  <string name="minve">- ve</string>
  <string name="date">Date</string>
  <string name="precautions">Precautions</string>
  <string name="up_side_arrow">"&#x2B06;"></string>
  <string name="down_side_arrow">↓></string>
</resources>
