<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <ImageView
    android:id="@+id/iv_patient"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginStart="6dp"
    android:layout_marginTop="8dp"
    android:contentDescription="@string/desc"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/tv_patient_number"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginStart="24dp"
    android:background="@android:color/white"
    android:ems="3"
    android:gravity="start|center_vertical"
    android:maxLines="1"
    android:text="@string/number"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/iv_patient"
    app:layout_constraintStart_toEndOf="@+id/iv_patient"
    app:layout_constraintTop_toTopOf="@+id/iv_patient" />
  <TextView
    android:id="@+id/tv_patient_current"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:background="@android:color/white"
    android:ems="5"
    android:gravity="start|center_vertical"
    android:maxLines="1"
    android:text="@string/current"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/tv_patient_number"
    app:layout_constraintStart_toEndOf="@+id/tv_patient_number"
    app:layout_constraintTop_toTopOf="@+id/tv_patient_number" />
  <TextView
    android:id="@+id/tv_patient_age"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginStart="16dp"
    android:background="@android:color/white"
    android:ems="2"
    android:gravity="start|center_vertical"
    android:maxLines="1"
    android:text="@string/age"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/tv_patient_current"
    app:layout_constraintStart_toEndOf="@+id/tv_patient_current"
    app:layout_constraintTop_toTopOf="@+id/tv_patient_current" />
  <TextView
    android:id="@+id/tv_patient_city"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:layout_marginStart="20dp"
    android:background="@android:color/white"
    android:ems="5"
    android:gravity="start|center_vertical"
    android:maxLines="1"
    android:text="@string/city"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="@+id/tv_patient_age"
    app:layout_constraintStart_toEndOf="@+id/tv_patient_age"
    app:layout_constraintTop_toTopOf="@+id/tv_patient_age" />
</androidx.constraintlayout.widget.ConstraintLayout>