<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  tools:context="com.vishal.covid19india.view.fragment.covid19.child.StateWiseFragment">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
      android:id="@+id/tv_latest_updated"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginRight="8dp"
      android:gravity="center"
      android:text="@string/last_update"
      android:textColor="#28a745"
      android:textSize="16sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/tv_state"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="8dp"
      android:gravity="start|center_vertical"
      android:text="@string/state"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintLeft_toLeftOf="@id/tv_latest_updated"
      app:layout_constraintTop_toBottomOf="@id/tv_latest_updated" />

    <TextView
      android:id="@+id/tv_confirmed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="14dp"
      android:gravity="start|center_vertical"
      android:text="@string/confirmed"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/tv_state"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_state"
      app:layout_constraintTop_toTopOf="@id/tv_state" />
    <TextView
      android:id="@+id/tv_recovered"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:gravity="center"
      android:text="@string/rcvrd"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/tv_confirmed"
      app:layout_constraintStart_toEndOf="@id/tv_confirmed"
      app:layout_constraintTop_toTopOf="@id/tv_confirmed" />
    <TextView
      android:id="@+id/tv_deaths"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:gravity="start|center_vertical"
      android:text="@string/deaths"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/tv_recovered"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_recovered"
      app:layout_constraintTop_toTopOf="@id/tv_recovered" />
    <TextView
      android:id="@+id/tv_active"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:gravity="start|center_vertical"
      android:text="@string/active"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@id/tv_deaths"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@id/tv_deaths"
      app:layout_constraintTop_toTopOf="@id/tv_deaths" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_state_wise_data"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="60dp"
      android:layout_marginRight="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_state" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>