<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.vishal.covid19india.view.fragment.covid19.child.RawDataFragment">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
      android:id="@+id/tv_patient_symbol"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:text="@string/gender"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/tv_patient_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:gravity="center"
      android:text="@string/pid"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@+id/tv_patient_symbol"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tv_patient_symbol"
      app:layout_constraintTop_toTopOf="@+id/tv_patient_symbol" />
    <TextView
      android:id="@+id/tv_patient_stage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:gravity="center"
      android:text="@string/current"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@+id/tv_patient_symbol"
      app:layout_constraintStart_toEndOf="@+id/tv_patient_id"
      app:layout_constraintTop_toTopOf="@+id/tv_patient_symbol" />
    <TextView
      android:id="@+id/tv_patient_age"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:gravity="center"
      android:text="@string/age"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@+id/tv_patient_symbol"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tv_patient_stage"
      app:layout_constraintTop_toTopOf="@+id/tv_patient_symbol" />
    <TextView
      android:id="@+id/tv_patient_city"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:gravity="center"
      android:text="@string/city"
      android:textColor="@android:color/black"
      android:textSize="14sp"
      app:layout_constraintBottom_toBottomOf="@+id/tv_patient_symbol"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tv_patient_age"
      app:layout_constraintTop_toTopOf="@+id/tv_patient_symbol" />
    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_raw_data"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="40dp"
      android:layout_marginRight="8dp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_patient_symbol" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>