<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.vishal.covid19india.view.fragment.covid19.child.CityWiseFragment">

  <LinearLayout
    android:id="@+id/ll_city_wise_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    android:weightSum="3">
    <TextView
      android:id="@+id/tv_state"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="1dp"
      android:layout_weight="1"
      android:background="@android:color/darker_gray"
      android:gravity="center"
      android:text="@string/state"
      android:textColor="@android:color/black"
      android:textSize="14sp" />


    <TextView
      android:id="@+id/tv_city"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="1dp"
      android:layout_weight="1"
      android:background="@android:color/darker_gray"
      android:gravity="center"
      android:text="@string/district"
      android:textColor="@android:color/black"
      android:textSize="14sp" />
    <TextView
      android:id="@+id/tv_confirmed"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="1dp"
      android:layout_weight="1"
      android:background="@android:color/darker_gray"
      android:gravity="center"
      android:text="@string/confirmed"
      android:textColor="@android:color/black"
      android:textSize="14sp" />


  </LinearLayout>
  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_city_wise_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/ll_city_wise_data"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp" />
</RelativeLayout>